@@ -99,12 +99,12 @@ REPOSITORY
     <https://github.com/tupinek/Error-Pure-Output-Tags-HTMLCustomPage>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2014-2015 Michal Špaček
+     © 2014-2015 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
